--- a/projekt_zespolowy/Views/Shared/_Layout.cshtml
+++ b/projekt_zespolowy/Views/Shared/_Layout.cshtml
@@ -8,12 +8,15 @@
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
 
+    <!-- FontAwesome (ikony) -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" />
 </head>
 <body>
     <div class="d-flex" id="wrapper">
 
-        <!-- Sidebar -->
+        <!-- ========================================= -->
+        <!-- POCZĄTEK PASKA BOCZNEGO (SIDEBAR)         -->
+        <!-- ========================================= -->
         <div id="sidebar-wrapper">
             <div class="sidebar-heading">
                 <i class="fas fa-wallet me-2"></i>SmartBudget
@@ -28,22 +31,30 @@
                 <a asp-controller="Budgets" asp-action="Index" class="list-group-item list-group-item-action bg-transparent">
                     <i class="fas fa-piggy-bank me-3" style="width: 20px;"></i>Budżety
                 </a>
+
+                <!-- TUTAJ JEST NOWY LINK DO DŁUGÓW -->
+                <a asp-controller="Liabilities" asp-action="Index" class="list-group-item list-group-item-action bg-transparent">
+                    <i class="fas fa-hand-holding-usd me-3" style="width: 20px;"></i>Długi i Pożyczki
+                </a>
+
                 <a asp-controller="Categories" asp-action="Index" class="list-group-item list-group-item-action bg-transparent">
                     <i class="fas fa-tags me-3" style="width: 20px;"></i>Kategorie
                 </a>
                 <a asp-controller="Reports" asp-action="Index" class="list-group-item list-group-item-action bg-transparent">
                     <i class="fas fa-chart-pie me-3" style="width: 20px;"></i>Raporty
                 </a>
-                <!-- Nowa zakladka Edukacja -->
+
+                <!-- TUTAJ JEST LINK DO EDUKACJI -->
                 <a asp-controller="Edukacja" asp-action="Index" class="list-group-item list-group-item-action bg-transparent">
                     <i class="fas fa-graduation-cap me-3" style="width: 20px;"></i>Edukacja
                 </a>
             </div>
         </div>
-        <!-- /#sidebar-wrapper -->
-        <!-- Page Content -->
+        <!-- KONIEC PASKA BOCZNEGO -->
+        <!-- Page Content Wrapper -->
         <div id="page-content-wrapper">
 
+            <!-- Górny pasek nawigacji (Navbar) -->
             <nav class="navbar navbar-expand-lg navbar-light top-navbar">
                 <div class="container-fluid">
                     <button class="btn btn-outline-secondary" id="menu-toggle">
@@ -62,20 +73,20 @@
                 </div>
             </nav>
 
+            <!-- Główna zawartość strony -->
             <div class="container-fluid p-4">
                 <main role="main">
                     @RenderBody()
                 </main>
             </div>
         </div>
-        <!-- /#page-content-wrapper -->
-
     </div>
 
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="~/js/site.js" asp-append-version="true"></script>
 
+    <!-- Skrypt do wysuwania/chowania menu -->
     <script>
         var el = document.getElementById("wrapper");
         var toggleButton = document.getElementById("menu-toggle");
